<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/languageTV"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/language_text"
        android:textColor="@color/gold"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop1"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <Button
        android:id="@+id/englishButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/grey2"
        android:text="@string/change_language1"
        android:layout_marginRight="5dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop1"
        app:layout_constraintEnd_toEndOf="@id/guidelineMid"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"/>

    <Button
        android:id="@+id/finnishButton"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/grey2"
        android:text="@string/change_language2"
        android:layout_marginLeft="5dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop1"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineMid" />

    <Button
        android:id="@+id/buyHistoryEmpty"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/grey2"
        android:text="@string/empty_buyhistory"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTop2"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        />

    <Button
        android:id="@+id/ratingEmpty"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/grey2"
        android:text="@string/empty_ratings"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/buyHistoryEmpty"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/return_button"
        android:backgroundTint="@color/grey2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/ratingEmpty"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />




</androidx.constraintlayout.widget.ConstraintLayout>