<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.CommentActivity">


    <ProgressBar
        android:id="@+id/starsBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="20dp"
        android:progressBackgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/starsMask"
        app:layout_constraintEnd_toEndOf="@+id/starsMask"
        app:layout_constraintStart_toStartOf="@+id/starsMask"
        app:layout_constraintTop_toTopOf="@+id/starsMask" />

    <ImageView
        android:id="@+id/starsMask"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:srcCompat="@drawable/t_hdet" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:thumbTint="@color/gold"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/starsMask" />

    <TextView
        android:id="@+id/starsText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/starsMask" />

    <EditText
        android:id="@+id/commentEdit"
        android:layout_width="329dp"
        android:layout_height="200dp"
        android:hint="@string/comment"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/addCommentButton"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/addCommentButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/grey2"
        android:text="@string/add_review"
        android:textColor="@color/gold"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/grey2"
        android:text="@string/cancel_button"
        android:textColor="@color/white"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="50dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <TextView
        android:id="@+id/movieNameText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>